# rust-web-view-demo

./: Cargo.toml  README.md
src/: main.rs
src/js-src/: .gitignore  package.json  tsconfig.json
src/js-src/src/: index.tsx
src/js-src/static/: index.html  style.css
view/: package.json  tsconfig.json
view/src/: App.svelte  main.ts  rpc.ts
